# final-project-level3-nlp-13

./: .env.template  .gitignore  agent.py  build_corpus.py  classes.py  crawler.py  inference.py  install_elastic_search.sh  install_requirements.sh  push_to_hub.py  pyproject.toml  readme.md  requirements.txt  spam_inference.py  spam_train.py  train.py  vocab.json
01-fastapi/: pyproject.toml
01-fastapi/app/: frontend.py  main.py  model.py  pyproject.toml
01-fastapi/examples/: 01_simple_webserver.py
airflow/dags/: agent.py
chatbot/: readme.md
chatbot/generator/: add_words.pickle  inference.py  train.py  util.py
chatbot/pipeline/: data_pipeline.py
chatbot/retriever/: consonant_vowel_tokenizer.py  elastic_retriever.py  fuzzy_matching.py  install_elastic_search.sh  retriever_config.yaml  setting.json  template.csv
config/: base_config.yaml
corpus/: README.md  build_corpus.py
corpus/crawlers/: __init__.py  aihub_crawler.py  kin_crawler.py  kin_filter.py  naver_crawler.py  naver_jisikin_crawler.py  theqoo_crawler.py  twitter_crawler.py
corpus/twitter_classification/: README.md  data_process.py  dataset.py  inference.py  train.py  tweet_classification_config.yaml  upload_huggingface_dataset.py
crawlers/: __init__.py  kin_crawler.py  naver_crawler.py  theqoo_crawler.py  twitter_crawler.py
data/twitter_data_preprocess/: data_process.py  train.py  tweet_classification_config.yaml  upload_huggingface_dataset.py
data_loader/: data_loaders.py
database/: mongodb.py
notebook/: AIhub_data_to_csv.ipynb  spell_compare.ipynb  upload_dataset_to_huggingface.ipynb
pretraining/: readme.md  run_bart_dlm_flax.py  run_t5_mlm_flax.py
prototype/: Makefile  pyproject.toml  readme.md
prototype/app/: frontend.py  main.py  model.py
prototype/config/: base_config.yaml
retriever/: dpr_dataset.py  dpr_model.py  dpr_trainer.py  elastic_retriever.py  train_dpr.py
spam_filter/: readme.md  spam_filter.py  spam_inference.py  spam_train.py
spam_filter/config/: base_config.yaml
spam_filter/data_loader/: data_loaders.py
trainer/: trainer.py
twitter/: .env.template  automatic_reply.py  data_pipeline.py  last_seen_id.txt  main.py  readme.md  tweet_pipeline.py
twitter/config/: base_config.yaml
twitter/utils/: util.py
utils/: EDA.py  push_model_to_hub.py  util.py  wordcloud.py
(+13 files in other folders)
