[tool.poetry]
name = "nlpotato"
version = "0.1.0"
description = ""
authors = ["wjlee-ling <wjlee.ling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2022.7.1"
selenium = "^4.7.2"
tqdm = "^4.64.1"
python-dotenv = "^0.21.0"
requests = "^2.28.2"
pandas = "^1.5.2"
tweepy = "^4.12.1"
pyvirtualdisplay = "^3.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
