[tool.poetry]
name = "ps-jjn"
version = "0.1.0"
description = "Product Serving mission"
authors = ["JunNyeong Jeong <jjn00712@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ps_jjn"}]

[tool.poetry.dependencies]
python = "3.8.5"
transformers = "^4.25.1"
fastapi = "^0.70.0"
pytest = "^6.2.5"
uvicorn = "^0.20.0"
albumentations = "^1.3.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
streamlit = "^1.17.0"
streamlit-chat = "^0.0.2.1"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
